--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ image = "0.24.7"
 # pollster = "0.3.0"
 wgpu = "0.17.0"
 libhdr = {version = "0.1.1", registry="rin-rs"}
+dds = {version = "0.2", registry="rin-rs"}
 
 
 
