support for ktx2 and argument to select format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ image = "0.24.7"
 wgpu = "0.17.0"
 libhdr = {version = "0.1.1", registry="rin-rs"}
 dds = {version = "0.2", registry="rin-rs"}
+libktx-rs-sys = "0.3.3+v4.0.0"
 
 
 
