--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,12 @@ description = "Skylights is a command line tool to bake radiance and irradiance 
 
 [dependencies]
 async-std = { version = "1.12.0", features = ["attributes"] }
-bytemuck = "1.14.0"
+bytemuck = { version = "1.14.0", features = ["derive"] }
 clap = { version = "4.4.3", features = ["derive"] }
 env_logger = "0.10.0"
 futures = "0.3.28"
 futures-intrusive = "0.5.0"
 image = "0.24.7"
-# pollster = "0.3.0"
 wgpu = "0.17.0"
 libhdr = {version = "0.1.1", registry="rin-rs"}
 dds = {version = "0.2", registry="rin-rs"}
