--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ regex = "1.9.5"
 half = { version = "2.3.1", features = ["bytemuck", "num-traits"] }
 num-traits = "0.2.16"
 anyhow = { version = "1.0.75", features = ["backtrace"] }
+log = "0.4.20"
 
 
 
